--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <script src="Globals.js"></script>
     <script src="TorrensSim.js"></script>
     <script src="VaporPressureDB.js"></script>
     <script src="Sketch.js"></script>
