--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <body>
     <script src="Globals.js"></script>
     <script src="TorrensSim.js"></script>
-    <script src="VaporPressureDB.js"></script>
+    <script src="VaporProperties.js"></script>
     <script src="Sketch.js"></script>
 </body></html>
