--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <script src="Globals.js"></script>
+    <script src="DOMs.js"></script>
     <script src="TorrensSim.js"></script>
     <script src="VaporProperties.js"></script>
     <script src="Sketch.js"></script>
