--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
+    <script src="p5.min.js"></script>
     <meta charset="utf-8">
   </head>
   <body>
